--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "cors": "2.8.5",
     "csv-parse": "5.5.6",
     "express": "4.19.2",
+    "express-rate-limit": "^7.1.5",
     "helmet": "7.1.0",
     "morgan": "1.10.0",
     "pg": "8.11.5",
