Add DOMPurify for XSS prevention and update package dependencies
- Integrated DOMPurify into the security middleware for enhanced XSS protection.
- Updated package.json and package-lock.json to include new dependencies: dompurify and jsdom.
- Enhanced input sanitization logic to utilize DOMPurify for string sanitization.
- Added new logging entries to track API server startup and shutdown events.

--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,9 @@
     "helmet": "7.1.0",
     "morgan": "1.10.0",
     "pg": "8.11.5",
-    "zod": "3.23.8"
+    "zod": "3.23.8",
+    "dompurify": "^3.0.5",
+    "jsdom": "^23.0.1"
   },
   "devDependencies": {
     "vitest": "^1.0.4",
