--- a/api/package.json
+++ b/api/package.json
@@ -15,19 +15,21 @@
     "cookie-parser": "^1.4.7",
     "cors": "2.8.5",
     "csv-parse": "5.5.6",
+    "dompurify": "^3.0.5",
     "express": "4.19.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "7.1.0",
-    "morgan": "1.10.0",
-    "pg": "8.11.5",
-    "zod": "3.23.8",
-    "dompurify": "^3.0.5",
     "jsdom": "^23.0.1",
+    "morgan": "1.10.0",
     "multer": "^2.0.0",
-    "xlsx": "^0.18.5"
+    "pg": "8.11.5",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
+    "xlsx": "^0.18.5",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "vitest": "^1.0.4",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "vitest": "^1.0.4"
   }
 }
