--- a/api/package.json
+++ b/api/package.json
@@ -17,13 +17,13 @@
     "cors": "2.8.5",
     "csv-parse": "5.5.6",
     "dompurify": "^3.0.5",
-    "express": "4.19.2",
+    "express": "^4.22.1",
     "express-rate-limit": "^7.1.5",
     "helmet": "7.1.0",
     "jsdom": "^23.0.1",
-    "morgan": "1.10.0",
+    "morgan": "^1.10.1",
     "multer": "^2.0.0",
-    "nodemailer": "^6.9.0",
+    "nodemailer": "^7.0.13",
     "pg": "^8.11.5",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
